# PQDiSE-from-PQDPRF

./: .gitmodules  README.md
pqdise/: CMakeLists.txt  CMakePresets.json
pqdise/cmake/: buildDir.cmake  buildOptions.cmake  depHelper.cmake
pqdise/dEnc/: CMakeLists.txt
pqdise/dEnc/distEnc/: AmmrClient.cpp
pqdise/dEnc/dprf/: Dprf.h  LWRSymDprf.cpp  LWRSymDprf.h  LWR_helper.cpp  LWR_helper.h  Npr03AsymDprf.cpp  Npr03SymDprf.cpp
pqdise/dEnc/tools/: MultiKeyAES.h
pqdise/dEncFrontend/: CMakeLists.txt  main.cpp
pqdise/dEnc_tests/: AmmrClient_tests.cpp  AmmrClient_tests.h  CMakeLists.txt  Common.cpp  Compare_DPrfs.cpp  Compare_DPrfs.h  LWRDPRF_tests.cpp  LWRDPRF_tests.h  Npr03DPRF_tests.cpp  all.cpp  all.h
pqdprf/: ThPRF_consistency  ThPRF_consistency.cpp  ThPRF_correctness  ThPRF_correctness.cpp  ThPRF_security  ThPRF_security.cpp  compare_count_tT.csv
